--- a/.gitmodules
+++ b/.gitmodules
@@ -661,3 +661,6 @@
 [submodule "repositories/voby"]
 	path = repositories/voby
 	url = https://github.com/vobyjs/voby.git
+[submodule "repositories/pioppo"]
+	path = repositories/pioppo
+	url = https://github.com/fabiospampinato/pioppo.git
