--- a/.gitmodules
+++ b/.gitmodules
@@ -688,3 +688,6 @@
 [submodule "repositories/dettle-batch"]
 	path = repositories/dettle-batch
 	url = https://github.com/fabiospampinato/dettle-batch.git
+[submodule "repositories/shosho"]
+	path = repositories/shosho
+	url = https://github.com/fabiospampinato/shosho.git
