--- a/.gitmodules
+++ b/.gitmodules
@@ -694,3 +694,6 @@
 [submodule "repositories/pollex"]
 	path = repositories/pollex
 	url = https://github.com/fabiospampinato/pollex.git
+[submodule "repositories/file-pollex"]
+	path = repositories/file-pollex
+	url = https://github.com/fabiospampinato/file-pollex.git
