--- a/.gitmodules
+++ b/.gitmodules
@@ -727,3 +727,6 @@
 [submodule "repositories/crypto-prime-test"]
 	path = repositories/crypto-prime-test
 	url = https://github.com/fabiospampinato/crypto-prime-test.git
+[submodule "repositories/crypto-random-prime"]
+	path = repositories/crypto-random-prime
+	url = https://github.com/fabiospampinato/crypto-random-prime.git
