--- a/.gitmodules
+++ b/.gitmodules
@@ -766,3 +766,6 @@
 [submodule "repositories/siar"]
 	path = repositories/siar
 	url = https://github.com/fabiospampinato/siar.git
+[submodule "repositories/xml-simple-parser"]
+	path = repositories/xml-simple-parser
+	url = https://github.com/fabiospampinato/xml-simple-parser.git
