--- a/.gitmodules
+++ b/.gitmodules
@@ -778,3 +778,6 @@
 [submodule "repositories/regexp-ranged-exec"]
 	path = repositories/regexp-ranged-exec
 	url = https://github.com/fabiospampinato/regexp-ranged-exec.git
+[submodule "repositories/kasi"]
+	path = repositories/kasi
+	url = https://github.com/fabiospampinato/kasi.git
