--- a/.gitmodules
+++ b/.gitmodules
@@ -811,3 +811,6 @@
 [submodule "repositories/siero-worker"]
 	path = repositories/siero-worker
 	url = https://github.com/fabiospampinato/siero-worker.git
+[submodule "repositories/tokens-highlighter"]
+	path = repositories/tokens-highlighter
+	url = https://github.com/fabiospampinato/tokens-highlighter.git
