--- a/.gitmodules
+++ b/.gitmodules
@@ -889,3 +889,6 @@
 [submodule "repositories/promise-make-counter"]
 	path = repositories/promise-make-counter
 	url = https://github.com/fabiospampinato/promise-make-counter.git
+[submodule "repositories/grepgrep"]
+	path = repositories/grepgrep
+	url = https://github.com/fabiospampinato/grepgrep.git
