--- a/.gitmodules
+++ b/.gitmodules
@@ -928,3 +928,6 @@
 [submodule "repositories/chrome-devbox"]
 	path = repositories/chrome-devbox
 	url = https://github.com/fabiospampinato/chrome-devbox.git
+[submodule "repositories/graphmatch"]
+	path = repositories/graphmatch
+	url = https://github.com/fabiospampinato/graphmatch.git
