--- a/.gitmodules
+++ b/.gitmodules
@@ -934,3 +934,6 @@
 [submodule "repositories/stubborn-utils"]
 	path = repositories/stubborn-utils
 	url = https://github.com/fabiospampinato/stubborn-utils.git
+[submodule "repositories/regexp-simple-parser"]
+	path = repositories/regexp-simple-parser
+	url = https://github.com/fabiospampinato/regexp-simple-parser.git
